samples/_failures_safe/1761619769_fd458f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d67a586.c: In function ‘main’:
./samples/SAFE/__tmp_3d67a586.c:174:25: error: missing terminating " character
  174 |         fprintf(stderr, "Error:
      |                         ^~~~~~~
./samples/SAFE/__tmp_3d67a586.c:174:9: error: expected expression at end of input
  174 |         fprintf(stderr, "Error:
      |         ^~~~~~~
./samples/SAFE/__tmp_3d67a586.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3d67a586.c:174:9: error: expected declaration or statement at end of input
